sf-hrms/force-app/main/default/objects/Payslip_Line__c/Payslip_Line__c.object-meta.xml
<CustomObject>
    <label>Payslip Line</label>
    <nameField>
        <label>Line No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payslip Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>