sf-hrms/force-app/main/default/objects/Payslip_Line__c/fields/Component__c.field-meta.xml
<CustomField><fullName>Component__c</fullName><label>Component</label><type>Lookup</type><referenceTo>Salary_Component__c</referenceTo><relationshipLabel>Payslip Lines</relationshipLabel><relationshipName>Payslip_Lines</relationshipName></CustomField>