sf-hrms/force-app/main/default/objects/Payslip_Line__c/fields/Component_Type__c.field-meta.xml
<CustomField><fullName>Component_Type__c</fullName><label>Component Type</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Earning</fullName><default>true</default></value><value><fullName>Deduction</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>