sf-hrms/force-app/main/default/objects/Payslip_Line__c/fields/Payslip__c.field-meta.xml
<CustomField><fullName>Payslip__c</fullName><label>Payslip</label><type>MasterDetail</type><referenceTo>Payslip__c</referenceTo><relationshipLabel>Lines</relationshipLabel><relationshipName>Lines</relationshipName><writeRequiresMasterRead>false</writeRequiresMasterRead><reparentableMasterDetail>false</reparentableMasterDetail></CustomField>